--- a/src/main/resources/message_vi.properties
+++ b/src/main/resources/message_vi.properties
@@ -42,3 +42,10 @@ CUSTOMER_CREATED=Thêm khách hàng thành công
 CUSTOMER_UPDATED=C?p nh?t khách hàng thành công
 CUSTOMER_DELETED=Xoá khách hàng thành công
 CUSTOMER_NOT_FOUND=Không tìm th?y khách hàng
+SHOP_ALREADY_EXISTS=Shop ?ã t?n t?i
+SHOP_NOT_FOUND=Không tìm th?y shop
+SALES_REPORT_CREATED=T?o báo cáo doanh thu thành công
+TABLE_CREATED=Thêm bàn thành công
+TABLE_LIST=L?y danh sách bàn thành công
+TABLE_STATUS_UPDATED=C?p nh?t tr?ng thái bàn thành công
+TABLE_NOT_FOUND=Không tìm th?y bàn
